--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,12 @@ if(NOT TARGET uo::uo_macro)
     find_package(uo_macro CONFIG REQUIRED)
 endif()
 
+if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
+  set(CMAKE_CXX_FLAGS_DEBUG "/ZI")
+  set(CMAKE_SHARED_LINKER_FLAGS "/SAFESEH:NO")
+  set(CMAKE_EXE_LINKER_FLAGS "/SAFESEH:NO")
+endif()
+
 add_executable(uochess
     uochess.c
     uo_bitboard.c
