--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,8 @@ add_executable(uochess
     uo_evaluation.c
     uo_thread.c
     uo_misc.c
+    uo_uci.c
+    uo_engine.c
     uo_test.c)
 
 target_include_directories(uochess
