--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -1,4 +1,11 @@
 ﻿{
+  "environments": [
+    {
+      "UO_OPT_EVALFILE": "nn/nn-test-eval.nnuo",
+      "UO_OPT_THREADS": "4",
+      "UO_OPT_HASH": "256"
+    }
+  ],
   "configurations": [
     {
       "name": "x64-Debug",
