--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -2,6 +2,7 @@
   "environments": [
     {
       "UO_OPT_TESTDATADIR": "${projectDir}/test_data",
+      "UO_OPT_NNDIR": "nn",
       "UO_OPT_EVALFILE": "nn/nn-test-eval.nnuo",
       "UO_OPT_THREADS": "4",
       "UO_OPT_HASH": "256"
