--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,7 +17,7 @@ add_executable(uochess
     uo_nn.c
     uo_nn_funcs.c
     uo_nn_node.c
-    uo_onnx.c
+    uo_onnx_helper.c
     uo_math.c
     uo_test.c)
 
