--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -52,13 +52,8 @@
           "type": "FILEPATH"
         },
         {
-          "name": "TensorFlow_DIR",
-          "value": "C:\\Users\\uotin\\Downloads\\libtensorflow-gpu-windows-x86_64-2.10.0",
-          "type": "FILEPATH"
-        },
-        {
           "name": "Torch_DIR",
-          "value": "C:\\Users\\uotin\\Downloads\\libtorch-win-shared-with-deps-1.13.1+cu116\\libtorch",
+          "value": "C:\\Users\\uotin\\Downloads\\libtorch-win-shared-with-deps-1.13.1+cu116\\libtorch\\share\\cmake\\Torch",
           "type": "FILEPATH"
         }
       ],
@@ -85,13 +80,8 @@
           "type": "FILEPATH"
         },
         {
-          "name": "TensorFlow_DIR",
-          "value": "C:\\Users\\uotin\\Downloads\\libtensorflow-gpu-windows-x86_64-2.10.0",
-          "type": "FILEPATH"
-        },
-        {
           "name": "Torch_DIR",
-          "value": "C:\\Users\\uotin\\Downloads\\libtorch-win-shared-with-deps-1.13.1+cu116\\libtorch",
+          "value": "C:\\Users\\uotin\\Downloads\\libtorch-win-shared-with-deps-1.13.1+cu116\\libtorch\\share\\cmake\\Torch",
           "type": "FILEPATH"
         }
       ],
