Refactor search algorithm and work on test cases.

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -52,6 +52,11 @@
           "type": "FILEPATH"
         }
       ],
+      "environments": [
+        {
+          "UO_OPT_THREADS": "1"
+        }
+      ],
       "inheritEnvironments": []
     },
     {
