--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -82,6 +82,10 @@ add_test(NAME "Test evaluation"
   COMMAND uochess --test --datadir ${PROJECT_SOURCE_DIR}/test_data --testname evaluation
   WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
 
+add_test(NAME "Test static_exchange_evaluation"
+  COMMAND uochess --test --datadir ${PROJECT_SOURCE_DIR}/test_data --testname static_exchange_evaluation
+  WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
+
 add_test(NAME "Test tb_probe"
   COMMAND uochess --test --datadir ${PROJECT_SOURCE_DIR}/test_data --testname tb_probe
   WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
